Ready css and HTML. Broken functionality

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.jopa {
+  color: red;
+}
+
+.bigjopa {
+  .jopa {
+    color: blue;
+  }
+}
 
 .App-header {
   background-color: #282c34;
